# TPLab1

./: CMakeLists.txt  SerializedCollections  main.cpp
Collections/: Deque.cpp  List.cpp  Stack.h
Container of Containers/: Queue.h
Containers_lib/: CMakeLists.txt
Containers_lib/Collections/: Collection.cpp  Collection.h  Deque.cpp  Deque.h  List.cpp  List.h  Stack.cpp  Stack.h
Containers_lib/Container_of_containers/: Queue.h
Containers_lib/Serialization/: Deserializator.cpp  Deserializator.h  Serializator.cpp  Serializator.h
Google_tests/: CMakeLists.txt  DequeTest.cpp  DeserializeTest.cpp  ListPerformance.cpp  ListTest.cpp  QueueTest.cpp  SerializeTest.cpp  StackTest.cpp
Google_tests/lib/googletest/test/: gtest_xml_output_unittest.py
